--- a/client/policyengine-core/example/public/index.html
+++ b/client/policyengine-core/example/public/index.html
@@ -2,19 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#FFF" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="See how policy changes affect you and the UK population"
     />
-    <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <title>PolicyEngine UK</title>
+    <meta name="title" content="PolicyEngine UK">
+    <meta name="description" content="See how changes to tax-benefit policy affect the UK and your household">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PolicyEngine UK">
+    <meta property="og:description" content="See how changes to tax-benefit policy affect the UK and your household">
+    <meta property="og:image" content="https://uk.policyengine.org/social_preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="PolicyEngine UK">
+    <meta property="twitter:description" content="See how changes to tax-benefit policy affect the UK and your household">
+    <meta property="twitter:image" content="https://uk.policyengine.org/social_preview.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Roboto+Slab&family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,16 +42,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>policyengine-client</title>
   </head>
-
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-
-    <div id="root"></div>
-
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root" style="max-width: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
