Fix social preview

--- a/policyengine-client/public/index.html
+++ b/policyengine-client/public/index.html
@@ -18,13 +18,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="PolicyEngine UK">
     <meta property="og:description" content="See how changes to tax-benefit policy affect the UK and your household">
-    <meta property="og:image" content="https://uk.policyengine.org/social_preview.png">
+    <meta property="og:image" content="https://policyengine.org/social_preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="PolicyEngine UK">
     <meta property="twitter:description" content="See how changes to tax-benefit policy affect the UK and your household">
-    <meta property="twitter:image" content="https://uk.policyengine.org/social_preview.png">
+    <meta property="twitter:image" content="https://policyengine.org/social_preview.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
