--- a/policyengine-client/index.html
+++ b/policyengine-client/index.html
@@ -25,8 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Roboto&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
